# x-oshi-training-bot

./: .env.example  .gitignore  README.md  app.py  cdk.json  package.json  pyproject.toml
data/: dq3_xp_table.json
scripts/: init_emotion_images.py  init_xp_table.py  sync_lambda_package.sh  test_agentcore_quality.py  test_ego_search_thread.py  test_morning_content.py
src/hokuhoku_imomaru_bot/: __init__.py  lambda_handler.py
src/hokuhoku_imomaru_bot/clients/: __init__.py  x_api_client.py
src/hokuhoku_imomaru_bot/infrastructure/: __init__.py  stack.py
src/hokuhoku_imomaru_bot/models/: __init__.py  bot_state.py
src/hokuhoku_imomaru_bot/services/: __init__.py  ai_generator.py  daily_reporter.py  image_compositor.py  level_manager.py  (+4 more)
tests/: test_lambda_handler.py
tests/clients/: __init__.py  test_x_api_client.py
tests/infrastructure/: __init__.py  test_stack.py
tests/models/: test_bot_state.py
tests/scripts/: __init__.py  test_init_xp_table.py
tests/services/: __init__.py  test_ai_generator.py  test_ai_generator_properties.py  test_daily_reporter.py  test_daily_reporter_agentcore.py  test_daily_reporter_properties.py  test_daily_reporter_schedule.py  test_image_compositor.py  test_level_manager.py  test_level_manager_properties.py  test_profile_updater.py  test_profile_updater_properties.py  test_state_store.py  test_state_store_properties.py  test_timeline_monitor.py  test_timeline_monitor_properties.py  test_xp_calculator.py  test_xp_calculator_properties.py
tests/utils/: __init__.py  test_agentcore_runtime.py  test_error_handler.py  test_logging.py
(+4 files in other folders)
